refactor: replace manual mapping with MapStruct and simplify Event/User services